@@ -19,6 +19,7 @@
 - check options length before use in parse_amd.c.
 - fix some out of order evaluations in parse_amd.c.
 - fix copy and paste error in dup_defaults_entry().
+- fix leak in parse_mount().
 
 04/06/2014 autofs-5.1.0
 =======================
